Fixed #46 -- clickable area of mark as read button & size on mobile devices

--- a/scss/partials/_320.scss
+++ b/scss/partials/_320.scss
@@ -104,7 +104,6 @@
 
 			input {
 				font-size: 20px;
-				padding: 0 3px;
 			}
 		}
 
@@ -116,6 +115,11 @@
 
 		.date {
 			width: 100%;
+			margin-bottom: 0;
+		}
+
+		.actions {
+			margin-bottom: 1em;
 		}
 	}
 
